--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://mirastudy-backend.herokuapp.com"
+  "proxy": "http://localhost:3001"
 }
